Add background, alignment, and justification options to banner management
- Introduced new properties in the Banner interface for background, vertical alignment, and horizontal justification.
- Updated the banner list component to include dropdowns for selecting alignment options and a gradient builder for background customization.
- Enhanced form initialization and data handling to accommodate new fields.
- Added translations for new UI elements in both English and Arabic.

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -401,6 +401,21 @@
     "failedToDelete": "فشل حذف البنر",
     "updatedSuccessfully": "تم تحديث البنر بنجاح",
     "failedToUpdate": "فشل تحديث البنر",
+    "background": "الخلفية",
+    "backgroundPlaceholder": "مثال: #ff0000 أو linear-gradient(to right, #ff0000, #0000ff)",
+    "backgroundHint": "يمكنك استخدام لون عادي (مثل: #ff0000) أو gradient (مثل: linear-gradient(to right, #ff0000, #0000ff))",
+    "alignItems": "محاذاة عمودية",
+    "alignItemsPlaceholder": "اختر المحاذاة العمودية",
+    "justifyContent": "محاذاة أفقية",
+    "justifyContentPlaceholder": "اختر المحاذاة الأفقية",
+    "alignItemsFlexStart": "أعلى",
+    "alignItemsCenter": "وسط",
+    "alignItemsFlexEnd": "أسفل",
+    "justifyContentFlexStart": "يسار",
+    "justifyContentCenter": "وسط",
+    "justifyContentFlexEnd": "يمين",
+    "justifyContentSpaceBetween": "توزيع بين العناصر",
+    "justifyContentSpaceAround": "توزيع حول العناصر",
     "createdSuccessfully": "تم إنشاء البنر بنجاح",
     "failedToCreate": "فشل إنشاء البنر",
     "activated": "تم تفعيل البنر",
