--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -402,6 +402,21 @@
     "failedToDelete": "Failed to delete banner",
     "updatedSuccessfully": "Banner updated successfully",
     "failedToUpdate": "Failed to update banner",
+    "background": "Background",
+    "backgroundPlaceholder": "e.g., #ff0000 or linear-gradient(to right, #ff0000, #0000ff)",
+    "backgroundHint": "You can use a solid color (e.g., #ff0000) or gradient (e.g., linear-gradient(to right, #ff0000, #0000ff))",
+    "alignItems": "Vertical Alignment",
+    "alignItemsPlaceholder": "Select vertical alignment",
+    "justifyContent": "Horizontal Alignment",
+    "justifyContentPlaceholder": "Select horizontal alignment",
+    "alignItemsFlexStart": "Top",
+    "alignItemsCenter": "Center",
+    "alignItemsFlexEnd": "Bottom",
+    "justifyContentFlexStart": "Left",
+    "justifyContentCenter": "Center",
+    "justifyContentFlexEnd": "Right",
+    "justifyContentSpaceBetween": "Space Between",
+    "justifyContentSpaceAround": "Space Around",
     "createdSuccessfully": "Banner created successfully",
     "failedToCreate": "Failed to create banner",
     "activated": "Banner activated",
