Enhance banner management and UI components
- Added new properties to the Banner interface for text color, noBackground, and flexDirection to improve customization options.
- Updated the banner list component to include new form fields for text color and flex direction, enhancing user experience.
- Introduced a background toggle in the gradient builder for better background management.
- Enhanced the app menu with badges for beta and new features, improving navigation clarity.
- Added review date functionality in the review management interface, including UI updates for better data handling.
- Updated translations for new UI elements in both English and Arabic, ensuring consistency across the application.

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -37,6 +37,8 @@
     "arabic": "العربية",
     "active": "نشط",
     "inactive": "غير نشط",
+    "beta": "بيتا",
+    "new": "جديد",
     "created": "تم الإنشاء",
     "updated": "تم التحديث",
     "deleted": "تم الحذف",
@@ -416,6 +418,8 @@
     "justifyContentFlexEnd": "يمين",
     "justifyContentSpaceBetween": "توزيع بين العناصر",
     "justifyContentSpaceAround": "توزيع حول العناصر",
+    "flexDirectionRow": "الاتجاه الأفقي",
+    "flexDirectionRowReverse": "الاتجاه الأفقي العكسي",
     "createdSuccessfully": "تم إنشاء البنر بنجاح",
     "failedToCreate": "فشل إنشاء البنر",
     "activated": "تم تفعيل البنر",
@@ -467,6 +471,7 @@
     "customerName": "اسم العميل",
     "rating": "التقييم",
     "comment": "التعليق",
+    "reviewDate": "تاريخ التقييم",
     "images": "الصور",
     "video": "الفيديو",
     "active": "مفعل",
@@ -482,6 +487,8 @@
     "customerNameRequired": "اسم العميل مطلوب.",
     "ratingRequired": "التقييم مطلوب (1-5 نجوم).",
     "commentPlaceholder": "أدخل تعليق التقييم (اختياري)",
+    "selectReviewDate": "اختر تاريخ التقييم",
+    "reviewDateHelp": "اختياري: حدد تاريخ مخصص لهذا التقييم (الافتراضي هو التاريخ الحالي)",
     "reviewImages": "صور التقييم",
     "uploadImages": "رفع الصور (متعدد)",
     "reviewVideo": "فيديو التقييم",
@@ -1249,6 +1256,7 @@
     "value": "القيمة",
     "selectCategory": "اختر الفئة",
     "selectBrand": "اختر العلامة التجارية",
+    "selectStatus": "اختر الحالة",
     "selectValue": "اختر القيمة",
     "valuePlaceholder": "مثال: 507f1f77bcf86cd799439011",
     "inOperatorHint": "لعامل 'in'، استخدم قيماً مفصولة بفواصل",
@@ -1299,6 +1307,7 @@
       "brand": "معرف العلامة التجارية",
       "price": "السعر",
       "stock": "المخزون",
+      "status": "الحالة",
       "isActive": "نشط",
       "isFeatured": "مميز",
       "tags": "العلامات",
