--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,6 +37,8 @@
     "arabic": "Arabic",
     "active": "Active",
     "inactive": "Inactive",
+    "beta": "BETA",
+    "new": "NEW",
     "created": "Created",
     "updated": "Updated",
     "deleted": "Deleted",
@@ -417,6 +419,8 @@
     "justifyContentFlexEnd": "Right",
     "justifyContentSpaceBetween": "Space Between",
     "justifyContentSpaceAround": "Space Around",
+    "flexDirectionRow": "Horizontal Direction",
+    "flexDirectionRowReverse": "Horizontal Direction Reverse",
     "createdSuccessfully": "Banner created successfully",
     "failedToCreate": "Failed to create banner",
     "activated": "Banner activated",
@@ -468,6 +472,7 @@
     "customerName": "Customer Name",
     "rating": "Rating",
     "comment": "Comment",
+    "reviewDate": "Review Date",
     "images": "Images",
     "video": "Video",
     "active": "Active",
@@ -483,6 +488,8 @@
     "customerNameRequired": "Customer name is required.",
     "ratingRequired": "Rating is required (1-5 stars).",
     "commentPlaceholder": "Enter review comment (optional)",
+    "selectReviewDate": "Select review date",
+    "reviewDateHelp": "Optional: Set a custom date for this review (defaults to current date)",
     "reviewImages": "Review Images",
     "uploadImages": "Upload Images (Multiple)",
     "reviewVideo": "Review Video",
@@ -1248,6 +1255,7 @@
     "value": "Value",
     "selectCategory": "Select Category",
     "selectBrand": "Select Brand",
+    "selectStatus": "Select Status",
     "selectValue": "Select Value",
     "valuePlaceholder": "e.g., 507f1f77bcf86cd799439011",
     "inOperatorHint": "For 'in' operator, use comma-separated values",
@@ -1298,6 +1306,7 @@
       "brand": "Brand ID",
       "price": "Price",
       "stock": "Stock",
+      "status": "Status",
       "isActive": "Is Active",
       "isFeatured": "Is Featured",
       "tags": "Tags",
