Enhance hero layout management and UI components
- Added new properties to the IHeroLayoutItem interface for layoutSettingsInfo and objectFit, improving customization options for hero layouts.
- Updated the hero layout form to include dropdowns for selecting layout settings and object fit, enhancing user experience.
- Implemented auto-save functionality for image and video uploads in the hero and review components, streamlining file management.
- Enhanced the hero layouts list component to display images with options to view and remove them, improving visual management.
- Updated translations for new UI elements in both English and Arabic, ensuring consistency across the application.

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1170,6 +1170,10 @@
     "order": "الترتيب",
     "createdAt": "تاريخ الإنشاء",
     "noHeroLayoutsFound": "لم يتم العثور على تخطيطات هيرو",
+    "images": "الصور",
+    "confirmRemoveImage": "هل أنت متأكد من حذف هذه الصورة؟",
+    "imageRemovedSuccessfully": "تم حذف الصورة بنجاح",
+    "failedToRemoveImage": "فشل في حذف الصورة",
     "confirmDelete": "هل أنت متأكد أنك تريد حذف \"{{name}}\"؟",
     "failedToLoad": "فشل تحميل تخطيطات الهيرو",
     "deletedSuccessfully": "تم حذف تخطيط الهيرو بنجاح",
@@ -1217,8 +1221,49 @@
     "gridLayout": "تخطيط الشبكة",
     "updatedSuccessfully": "تم تحديث تخطيط الهيرو بنجاح",
     "failedToUpdate": "فشل تحديث تخطيط الهيرو",
+    "autoSaved": "تم حفظ التغييرات تلقائياً",
     "createdSuccessfully": "تم إنشاء تخطيط الهيرو بنجاح",
-    "failedToCreate": "فشل إنشاء تخطيط الهيرو"
+    "failedToCreate": "فشل إنشاء تخطيط الهيرو",
+    "layoutSettings": "إعدادات التخطيط",
+    "layoutSettingsTitle": "تحديد مواقع المحتوى",
+    "layoutSettingsDescription": "تحكم في مكان ظهور المحتوى داخل كل بطاقة باستخدام إعداد موقع المحتوى أدناه.",
+    "maxWidth": "أقصى عرض",
+    "maxWidthHint": "تعيين الحد الأقصى لعرض حاوي تخطيط الهيرو",
+    "selectMaxWidth": "اختر أقصى عرض",
+    "justifyContent": "المحاذاة الأفقية",
+    "justifyContentHint": "التحكم في المحاذاة الأفقية للعناصر في الشبكة",
+    "selectJustifyContent": "اختر المحاذاة الأفقية",
+    "alignItems": "المحاذاة العمودية",
+    "alignItemsHint": "التحكم في المحاذاة العمودية للعناصر في الشبكة",
+    "selectAlignItems": "اختر المحاذاة العمودية",
+    "preview": "معاينة",
+    "layoutPreviewPlaceholder": "ستظهر معاينة التخطيط هنا",
+    "none": "لا شيء",
+    "justifyStart": "بداية",
+    "justifyCenter": "وسط",
+    "justifyEnd": "نهاية",
+    "justifyBetween": "مسافة بين",
+    "justifyAround": "مسافة حول",
+    "justifyEvenly": "مسافة متساوية",
+    "alignStart": "بداية",
+    "alignCenter": "وسط",
+    "alignEnd": "نهاية",
+    "alignStretch": "تمديد",
+    "layoutSettingsInfo": {
+      "label": "موقع المحتوى",
+      "placeholder": "اختر موقع المحتوى",
+      "description": "اختر مكان عرض العنوان والوصف والزر داخل البطاقة",
+      "center": "في الوسط",
+      "start": "في الأعلى",
+      "end": "في الأسفل"
+    },
+    "objectFit": {
+      "label": "ملاءمة الصورة/الفيديو",
+      "placeholder": "اختر ملاءمة المحتوى",
+      "description": "اختر كيفية ملاءمة الصور والفيديوهات داخل الحاوي",
+      "cover": "تغطية (ملء الحاوي)",
+      "contain": "احتواء (إظهار المحتوى الكامل)"
+    }
   },
   "productFeature": {
     "title": "ميزات المنتجات",
