--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1169,6 +1169,10 @@
     "order": "Order",
     "createdAt": "Created At",
     "noHeroLayoutsFound": "No hero layouts found.",
+    "images": "Images",
+    "confirmRemoveImage": "Are you sure you want to remove this image?",
+    "imageRemovedSuccessfully": "Image removed successfully",
+    "failedToRemoveImage": "Failed to remove image",
     "confirmDelete": "Are you sure you want to delete \"{{name}}\"?",
     "failedToLoad": "Failed to load hero layouts",
     "deletedSuccessfully": "Hero layout deleted successfully",
@@ -1216,8 +1220,49 @@
     "gridLayout": "Grid Layout",
     "updatedSuccessfully": "Hero layout updated successfully",
     "failedToUpdate": "Failed to update hero layout",
+    "autoSaved": "Changes auto-saved",
     "createdSuccessfully": "Hero layout created successfully",
-    "failedToCreate": "Failed to create hero layout"
+    "failedToCreate": "Failed to create hero layout",
+    "layoutSettings": "Layout Settings",
+    "layoutSettingsTitle": "Content Positioning",
+    "layoutSettingsDescription": "Control where content appears within each card using the content position setting below.",
+    "maxWidth": "Max Width",
+    "maxWidthHint": "Set the maximum width of the hero layout container",
+    "selectMaxWidth": "Select max width",
+    "justifyContent": "Horizontal Alignment",
+    "justifyContentHint": "Control horizontal alignment of items in the grid",
+    "selectJustifyContent": "Select horizontal alignment",
+    "alignItems": "Vertical Alignment",
+    "alignItemsHint": "Control vertical alignment of items in the grid",
+    "selectAlignItems": "Select vertical alignment",
+    "preview": "Preview",
+    "layoutPreviewPlaceholder": "Layout preview will appear here",
+    "none": "None",
+    "justifyStart": "Start",
+    "justifyCenter": "Center",
+    "justifyEnd": "End",
+    "justifyBetween": "Space Between",
+    "justifyAround": "Space Around",
+    "justifyEvenly": "Space Evenly",
+    "alignStart": "Start",
+    "alignCenter": "Center",
+    "alignEnd": "End",
+    "alignStretch": "Stretch",
+    "layoutSettingsInfo": {
+      "label": "Content Position",
+      "placeholder": "Select content position",
+      "description": "Choose where to display the title, description, and button within the card",
+      "center": "Center",
+      "start": "Top",
+      "end": "Bottom"
+    },
+    "objectFit": {
+      "label": "Image/Video Fit",
+      "placeholder": "Select object fit",
+      "description": "Choose how images and videos should fit within their container",
+      "cover": "Cover (Fill container)",
+      "contain": "Contain (Show full content)"
+    }
   },
   "productFeature": {
     "title": "Product Features",
